2000-11-05  Mike Crowe <mac@fysh.org>

	* First public version 0.01 realeased.

2003-08-05  Mike Crowe <mac@fysh.org>

	* ID3v2 support added.

2004-02-06  Mike Crowe <mac@fysh.org>

	* Support for just dumping the bitrate of every frame added

2004-02-07  Mike Crowe <mac@fysh.org>

	* Released as v1.01

2004-02-10  Mike Crowe <mac@fysh.org>

	* Fix some packaging problems
	* Released as v1.02

2004-02-10  Mike Crowe <mac@fysh.org>

	* Now compiles on GCC3 in addition to GCC2.

2004-02-10  Mike Crowe <mac@fysh.org>

	* Released as v1.03

2004-02-12  Mike Crowe <mac@fysh.org>

	* Update configure.in to include size_t check. Can't use STDBOOL
	as recommended by autoscan because old autoconf doesn't grok it.

	* Lose warning from newer automakes regarding += in Makefile.am.
	
2004-05-04  Mike Crowe <mac@fysh.org>

	* Update mp3_processor.cpp to remove debugging code.

	* Update main.cpp so that the -D short option is correctly
	supported.

	* Released as v1.04