@@ -23,3 +23,4 @@ Profile
 *.opt
 *.ncb
 *.plg
+types2.h
