@@ -1,14 +1,16 @@
 #ifndef TYPES_H
 #define TYPES_H 1
 
-typedef unsigned char BYTE;
+// Get hold of stdint.h if we have it, otherwise fake it up.
+#include "types2.h"
 
-#ifdef WIN32
-typedef __int64 LONGLONG;
-#define LONGLONGLITERAL(LLL) LLL ## i64
+typedef uint8_t BYTE;
+typedef uint64_t UINT64;
+
+#ifdef _MSC_VER
+#define UINT64LITERAL(LLL) LLL ## i64
 #else
-typedef long long LONGLONG;
-#define LONGLONGLITERAL(LLL) LLL ## LL
+#define UINT64LITERAL(LLL) LLL ## LL
 #endif
 
 typedef int ERROR;
